tickletListing Page alignment corrected

--- a/src/scss/_TicketReplyBottomContainer.scss
+++ b/src/scss/_TicketReplyBottomContainer.scss
@@ -216,13 +216,12 @@
                 }
 
                 .profile-picture-wrapper{
-                    display: inline-block;
-                    width:20px;
-                    height:20px;
-                    border: 1px solid black;
+                    background-image: url('../images/avatar.png');
+                    height:30px;
+                    width: 30px;
                     border-radius: 50%;
-                    position: relative;
-                    bottom: 2.5px;
+                    background-size: cover;
+                    margin: 0;
                 }
 
                 div{
